DE5611 - Android - Provide feedback and Privacy and Terms link do not work on MCD confirmation (iOS) (QC# 97049) DE5182  - Issues with Transfer Confirmation Page (IOS and Android) (QC# 94359)
Tested:
- Verified action link on Transfer confirmation page in both portrait and landscape
- Verified footer links for Privacy & Terms and Provide Feedback function in both portrait and landscape in several pages.

--- a/Discover-Bank-Phone/res/layout/bank_layout_footer.xml
+++ b/Discover-Bank-Phone/res/layout/bank_layout_footer.xml
@@ -16,9 +16,10 @@
         android:layout_marginTop="@dimen/forms_inner_padding" 
  		android:gravity="center_horizontal|bottom">
 
-        <TextView
+        <Button
             android:id="@+id/privacy_terms"
             style="@style/bank_blue_hyperlink_small"
+            android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bank_terms_privacy_n_terms" />
@@ -29,12 +30,14 @@
             android:layout_toRightOf="@+id/privacy_terms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/between_related_elements_padding"
             android:layout_marginRight="@dimen/between_related_elements_padding"
             android:text="@string/bank_divider" />
 
-        <TextView
+        <Button
             android:id="@+id/provide_feedback_button"
+            android:background="@android:color/transparent"
             style="@style/bank_blue_hyperlink_small"
             android:layout_toRightOf="@+id/divider"
             android:layout_width="wrap_content"
