DE5679 - Fixed SA appearance.  Both Radio Button choices have the same style.

--- a/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
+++ b/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
@@ -141,7 +141,7 @@
 
             <RadioButton
                 android:id="@+id/account_security_choice_one_radio"
-                style="@style/small_copy"
+                style="@style/field_copy_small"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:button="@drawable/custom_radio_check"
