--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -13,7 +13,7 @@
     <string name="E_4031106">Your Discover Card Account Number has been changed. In order to	access your account through the mobile channel, you must first log in to the Account Center on www.discover.com. For more information, please contact Customer Service at 1-877-742-7822</string>
     <string name="E_4031401_NOTENROLLED">Help us keep your account safe by visiting discover.com on your primary computer to establish your set of security questions.</string>
     <string name="E_4031402">For security purposes, your online account has been locked.Please call Discover Customer Service at	1-888-251-8003 for information about accessing your account online.</string>
-    <string name="E_4031402_LOCKOUT">We know you\'re excited to get into the app, but you\'ve tried to log in with the wrong username or password too many times."&lt;br&#47;&gt;""&lt;br&#47;&gt;Please contact Customer Service at 1-877-742-7822 for assistance.</string>
+    <string name="E_4031402_LOCKOUT">For security purposes, your online account has been locked."&lt;br&#47;&gt;""&lt;br&#47;&gt;Please call Discover Customer Service at 1-888-251-8003 for information about accessing your account online.</string>
     <string name="E_4031401_DENY">LOST CARD.</string>
     <string name="E_4031401_UNLOCKED">Help us keep your account safe by visiting discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_UNVERIFIED">Help us keep your account safe by visiting discover.com on your primary PC to establish your set of security questions.</string>
@@ -260,7 +260,7 @@
     <string name="E_T_4031102"> We\'re Sorry</string>
     <string name="E_T_4031105">Card Number Error</string>
     <string name="E_T_4031402">Enhanced Account Security</string>
-    <string name="E_T_4031402_LOCKOUT">You\'ve Been Locked Out</string>
+    <string name="E_T_4031402_LOCKOUT">Enhanced Account Security</string>
     <string name="E_T_4031401_UNLOCKED">Enhanced Account Security</string>
     <string name="E_T_4031401_NOTENROLLED">Enhanced Account Security</string>
     <string name="E_T_4031401_UNVERIFIED">Enhanced Account Security</string>
