--- a/Discover-Bank-Phone/res/layout/bank_header_progress.xml
+++ b/Discover-Bank-Phone/res/layout/bank_header_progress.xml
@@ -80,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/forms_inner_padding"
             android:gravity="right" >
 
             <ImageView
