--- a/Discover-Card-Phone/res/values/strings_url.xml
+++ b/Discover-Card-Phone/res/values/strings_url.xml
@@ -16,7 +16,7 @@
     <string name="strongAuth_url">reg/v1/user/sa/check</string>
     <string name="strongAuth_quest_url">strongauth/v1/challenge</string>
     <string name="strongAuth_ans_url">strongauth/v1/authenticate</string>
-    <string name="share_url">https://secure.opinionlab.com/ccc01/o.asp?id=OJMQyJQI&amp;referer=https://mobileapp.discover.com/</string>
+    <string name="share_url">https://secure.opinionlab.com/ccc01/o.asp?id=OWPeJUwo&amp;referer=https://mobileapp.discover.com/</string>
     <string name="xApplicationVersion">5.0.0</string>
     <!-- Bank SSO Login  -->
     <string name="sso_authenticate_url">acct/v1/tokensignin</string>
