DE5772: Android - Incorrect Phone Number on MCD enter amount page (QC# 97897) DE5773: Android - incorrect transitions after click on schedule payment and review   payments (QC# 97780)
Verified:
- Correct Need Help Number is shown in Check Deposit - Select Amount Page
- Application navigates straight to Review Payments from Schedule Payment Confirmation Page

--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -69,4 +69,6 @@
 	    We\'re sorry. 
 	    In order to use Mobile Check Deposit please use a device with a camera.
 	</string>
+	
+	<string name="bank_deposit_need_help_number">1&#8211;866&#8211;245&#8211;7419</string>
 </resources>
