US8920 : TA18326 - Updated the text on the use my location modal for the ATM locator. Changed the do not allow button to have the appearance of a link and changed the width of the allow buton to be closer to the width of the settings button on the location services modal as per Ricky's request.

--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -8,7 +8,7 @@
         You will not be charged an ATM surcharge for cash withdrawals at ATMs with orange pins. 
 		For Discover Credit Card cash advances, your cash advance APR and cash advance fee will apply.
 		\n\nBy tapping the \"Allow\" button, you hereby agree that Discover may access and use your current location 
-		information to show you the nearest ATM. If you tap on the \"Don\'t Allow\" button you will only be able to 
+		information to show you the nearest ATM. If you tap \"Don\'t Allow\" you will only be able to 
 		search by address.  
     </string>
     <string name="atm_location_modal_allow">Allow</string>
