--- a/Discover-Bank-Phone/res/layout/atm_get_location_modal.xml
+++ b/Discover-Bank-Phone/res/layout/atm_get_location_modal.xml
@@ -39,11 +39,14 @@
         android:layout_height="5dp"
         android:layout_above="@+id/modal_ok_button"
         android:background="@drawable/shadow_gradient"
+        android:contentDescription="@null"
         android:visibility="visible" />
 
     <Button
         android:id="@+id/modal_ok_button"
         style="@style/call_to_action_theme"
+        android:paddingLeft="45dp"
+        android:paddingRight="45dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/modal_alert_cancel"
@@ -53,9 +56,11 @@
 
     <Button
         android:id="@+id/modal_alert_cancel"
-        style="@style/white_button"
+        style="@style/blue_hyperlink"
+        android:background="@drawable/transparent_square"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="normal"
         android:layout_alignLeft="@+id/modal_ok_button"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/modal_ok_button"
