--- a/Discover-Commons/res/layout/account_toggle.xml
+++ b/Discover-Commons/res/layout/account_toggle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/account_toggle_width"
     android:layout_height="wrap_content" >
 
     <RelativeLayout
@@ -93,6 +93,20 @@
                 android:paddingLeft="@dimen/toggle_text_left_pad"
                 android:paddingTop="@dimen/between_related_elements_padding"
                 android:text="@string/sso_no_account_ending" />
+            
+            <ImageView
+                android:id="@+id/card_gray_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@null"
+                android:paddingBottom="@dimen/toggle_x_bottom_pad"
+                android:paddingLeft="@dimen/toggle_x_left_pad"
+                android:paddingRight="@dimen/toggle_x_right_pad_p"
+                android:paddingTop="@dimen/toggle_x_top_pad"
+                android:src="@drawable/card_icon" />
+            
         </RelativeLayout>
 
         <View
@@ -135,6 +149,20 @@
                 android:paddingTop="@dimen/toggle_bottext_bottom_pad"
                 android:text="@string/sso_discover_bank"
                 android:textStyle="bold" />
+            
+            <ImageView
+                android:id="@+id/bank_gray_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingBottom="@dimen/account_toggle_outside_padding"
+                android:paddingLeft="@dimen/toggle_x_left_pad"
+                android:paddingRight="@dimen/toggle_x_right_pad_p"
+                android:paddingTop="@dimen/toggle_x_top_pad"
+                android:contentDescription="@null"
+                android:src="@drawable/bank_gray_icon" />
+            
         </RelativeLayout>
     </RelativeLayout>
 
