--- a/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:paddingBottom="@dimen/modal_text_padding"
         android:background="@color/white" >
 
         <TextView
@@ -23,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modal_alert_title"
-            android:paddingTop="5dp"
             android:paddingLeft="7dp"
+            android:paddingTop="5dp"
             android:src="@drawable/atm_pinview_icon_sm" />
 
         <TextView
