--- a/Discover-Bank-Phone/res/layout/bank_textview_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_textview_layout.xml
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textViewLayout"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/light_gray_bkgrd" >
+    android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/header"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/between_related_elements_padding"
-        android:paddingRight="@dimen/forms_inner_padding"
-        android:paddingTop="@dimen/forms_inner_padding" >
-
-        <TextView
-            android:id="@+id/page_title"
-            style="@style/page_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/help"
-            android:text="@string/welcome_to_pay_bills" />        
-    </RelativeLayout>
-
-    <ScrollView 
+        android:id="@+id/textViewLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
- 		android:layout_below="@+id/header">
-	    <TextView
-	        android:id="@+id/content_text_view"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-			style="@style/small_copy"
-	        android:layout_marginLeft="@dimen/between_related_elements_padding"
-	        android:layout_marginRight="@dimen/between_related_elements_padding"/>
-	</ScrollView>
+        android:background="@drawable/light_gray_bkgrd" >
 
-</RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/between_related_elements_padding"
+            android:paddingRight="@dimen/forms_inner_padding"
+            android:paddingBottom="@dimen/forms_inner_padding" 
+            android:paddingTop="@dimen/forms_inner_padding" >
+
+            <TextView
+                android:id="@+id/page_title"
+                style="@style/page_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@+id/help"
+                android:text="@string/welcome_to_pay_bills" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/content_text_view"
+            style="@style/small_copy"
+            android:layout_below="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/between_related_elements_padding"
+            android:layout_marginRight="@dimen/between_related_elements_padding" />
+
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            style="@style/bank_layout_footer_style"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/content_text_view"
+            custom:footerType="2" />
+    </RelativeLayout>
+
+</ScrollView>
