--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -57,4 +57,10 @@
         <item name="android:background">@drawable/login_white_panel</item> <!-- bkgrnd -->
     </style>
     
+    <style name="goto_fastcheck_button_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/title</item>
+    </style>
+    
 </resources>
