--- a/Discover-Card-Phone/res/values/dimens.xml
+++ b/Discover-Card-Phone/res/values/dimens.xml
@@ -57,4 +57,8 @@
    	   <!-- Statements  -->
    	 <dimen name="Button_Corner">4dp</dimen>
    	 
+   	 <!-- fastcheck -->
+     <dimen name="login_bottom_button_height">50dp</dimen>
+   	 
+   	 
 </resources>
