--- a/Discover-Card-Phone/res/values/strings_drawer.xml
+++ b/Discover-Card-Phone/res/values/strings_drawer.xml
@@ -33,7 +33,9 @@
     <string name="section_title_profile_and_settings">Profile &amp; Settings</string>
     <string name="sub_section_title_manage_alerts">Manage Text &amp; Alerts</string>
     <string name="sub_section_title_alert_history">Push Alerts History</string>
-    <string name="sub_section_title_create_cash_pin">Create Cash PIN</string>    
+    <string name="sub_section_title_create_cash_pin">Create Cash PIN</string>
+    <!--<string name="sub_section_title_maintain_fastcheck">Quick Look</string>-->
+        
     
     <string name="section_title_customer_service">Customer Service</string>
     <string name="sub_section_title_contact_us">Contact Us</string>
