--- a/Discover-Card-Phone/res/values/styles.xml
+++ b/Discover-Card-Phone/res/values/styles.xml
@@ -1,5 +1,21 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     
+    <!-- fastcheck display -->
+   <style name="OrangeTheme">
+        <item name="android:background">@drawable/splash_screen</item>
+   </style>
+   <!--<style name="login_white_pane">
+        <item name="android:layout_marginLeft">@dimen/forms_inner_padding</item>
+        <item name="android:layout_marginRight">@dimen/forms_inner_padding</item>
+        <item name="android:background">@drawable/login_white_panel</item>
+    </style>-->
+    <style name="login_bottom_bar_button">
+        <item name="android:padding">@dimen/content_padding</item>
+        <item name="android:textSize">@dimen/small_copy_min</item>
+        <item name="android:background">@drawable/login_bottom_bar_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:height">@dimen/login_bottom_button_height</item>
+    </style>
     <style name="forgot_credentials_title" parent="title_copy">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:textColor">@color/title</item>
@@ -7,7 +23,21 @@
         <item name="android:textStyle">bold</item>
         <item name="android:typeface">normal</item>
     </style>
-
+    <style name="back_button_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/title</item>
+    </style>
+    <style name="field_copy_fastcheck_timestamp" parent="discover_text">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@color/field_copy</item>
+    </style>
+	<style name="title_copy_fastcheck_salutation" parent="discover_text">
+       <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/title</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
  <!-- Confirmation Screen Styles -->
     <style name="confirmation_info_header_text">
         <item name="android:textColor">@color/field_copy</item>
@@ -152,7 +182,7 @@
         <item name="android:textStyle">bold</item>
     </style>
     
-        <style name="modal_title_text" parent="title_copy">
+    <style name="modal_title_text" parent="title_copy">
         <item name="android:layout_marginBottom">@dimen/modal_text_padding</item>
         <item name="android:layout_marginTop">@dimen/modal_text_padding</item>
         <item name="android:layout_marginBottom">@dimen/modal_text_padding</item>
